--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
         <textarea name="Message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
         <input type="submit"  value="Send Message" class="btn">
-        <input type="hidden" name="_next" value="http://127.0.0.1:5500/thankyou.html">
+        <input type="hidden" name="_next" value="https://abhijithr1.github.io/Portfolio-/thankyou.html">
     </form>
 </section>
 
