--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         
         <div class="social-media">
             <a href="#"><i class='bx bxl-github'></i></a>
-            <a href="https://www.linkedin.com/in/abhijith-r-382491118/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.linkedin.com/in/abhijithr13/" target="_blank"><i class='bx bxl-linkedin'></i></a>
         </div>
-    <a href="Abhijith _R_CV.pdf" download class="btnn">Download Resume</a>
+    <a href="dummy_doc.pdf" download class="btnn">Download Resume</a>
     </div>
     <div class="profession-container">
         <div class="profession-box">
@@ -170,7 +170,7 @@
         </div>
         <textarea name="Message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
         <input type="submit"  value="Send Message" class="btn">
-        <input type="hidden" name="_next" value="https://abhijithr1.github.io/Portfolio-/thankyou.html">
+        <input type="hidden" name="_next" value="https://abhijithr-portfolio.netlify.app/thankyou.html">
     </form>
 </section>
 
